criação primeira view

--- a/setup/templates/home.html
+++ b/setup/templates/home.html
@@ -6,6 +6,6 @@
     <title>Minha página de teste</title>
   </head>
   <body>
-    <img src="images/firefox-icon.png" alt="minha página de teste" />
+    <span>pagina</span>
   </body>
 </html>
